<resources>
    <string name="app_name">Idea Lab</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Open_Nav">"Open Navigation drawer"</string>
    <string name="Close_Nav">"Close Navigation drawer"</string>
    <string name="q1">What <font color="#1976D2">We are</font> </string>
    <string name="a1"><font color="#1976D2">IDEA Lab</font> . will provide all facilities under one roof, for conversion of an idea into a prototype. The idea need not always be new but the emphasis would be on graduating engineers working with their hands using equipment, tools and consumables. The focus will be on training students so that they become imaginative and creative and stay so at the workplaces they join.</string>
    <string name="q2">Our <font color="#1976D2">Mission</font></string>
    <string name="a2"><font color="#1976D2">We at LNCT</font> , believe our first responsibility is to the students and their parents in meeting their needs everything we do must be of high quality. We must constantly strive to improve our standards. New equipment must be purchased and new facilities provided Research must be carried on, innovative ideas developed and industries collaborated with.\n\n 1. To improve continually in the teaching learning process by strengthening infrastructural facilities and faculty credentials. \n\n 2. To undertake interdisciplinary research and development by engaging the faculty and students in curricular, cocurricular and industry collaborated projects towards problem-solving. \n\n 3. To enhance the proportion of skilled based courses beyond the curriculum to create more employable graduates.</string>
    \
    <string name="q3"><font color="#1976D2">Our Role</font></string>
    <string name="a3"><font color="#1976D2">To inspire</font> . and provide the young scientists of India with the required infrastructure to convert their dreams into reality. With the commitment of “Working Towards Being the Best”, LNCT is positive to provide students with state of art infrastructure to facilitate students in being their best selves and excel in the research field.To inspire . and provide the young scientists of India with the required infrastructure to convert their dreams into reality. With the commitment of “Working Towards Being the Best”, LNCT is positive to provide students with state of art infrastructure to facilitate students in being their best selves and excel in the research field.</string>
</resources>